src/frontend/public/style.css
body {
	font-family: Trebuchet MS, Helvetica, sans-serif;
}



.smallText {
	font-size: small;
}
.textCentered {
	text-align: center;
}
.warn {
	color: red !important;
	
	svg {
		fill: red !important;
		transition: fill 300ms;
		
		&:hover {
			fill: darkred !important;
		}
	}
}

.horizontal, .vertical {
	gap: 5px;
	
	&.noGap {
		gap: 0;
	}
	
	&.fullLine {
		display: flex;
		width: 100%;
	}
	
	&.maxWidth {
		max-width: 100%;
	}
	
	> .fillSpace {
		flex: 1 1 auto;
	}
	
	> .selfAlignStretch {
		align-self: stretch;
	}
	> .selfAlignStart {
		align-self: flex-start;
	}
	> .selfAlignCenter {
		align-self: center;
	}
	> .selfAlignEnd {
		align-self: flex-end;
	}
}

.horizontal {
	display: inline-flex;
	flex-direction: row;
	
	&.vAlignStart {
		align-items: flex-start;
	}
	&.vAlignCenter {
		align-items: center;
	}
	&.vAlignStretched {
		align-items: stretch;
	}
	&.vAlignEnd {
		align-items: flex-end;
	}
	
	&.hAlignSpaced {
		justify-content: space-between;
	}
	&.hAlignCenter {
		justify-content: center;
	}
	&.hAlignEnd {
		justify-content: flex-end;
	}
	
	&.wrapContent {
		flex-wrap: wrap;
	}
}
.vertical {
	display: inline-flex;
	flex-direction: column;
	
	&.reversed {
		flex-direction: column-reverse;
	}
	
	&.hAlignStart {
		align-items: flex-start;
	}
	&.hAlignCenter {
		align-items: center;
	}
	&.hAlignEnd {
		align-items: flex-end;
	}
	&.hAlignStretched {
		align-items: stretch;
	}
	
	&.vAlignStart {
		justify-content: flex-start;
	}
	&.vAlignCenter {
		justify-content: center;
	}
	&.vAlignEnd {
		justify-content: flex-end;
	}
	
	&.wrapContent {
		flex-wrap: wrap;
	}
}

